--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ body, html {
   color: #fff;
   font-size: 18px;
   cursor: pointer;
+  border-radius: 5px;
+	-moz-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5);
+	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5);
 }
 .toolbar select, .toolbar input {
   font-size: 18px;
