--- a/web/style.css
+++ b/web/style.css
@@ -35,6 +35,20 @@ body, html {
   border-radius: 5px;
 	box-shadow: 0px 3px 2px -2px rgba(0, 0, 0, 0.5);
 }
+.reset-button {
+  border: 0;
+  padding: 7px 15px;
+  background: #eee;
+  color: #000;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+	box-shadow: 0px 3px 2px -2px rgba(0, 0, 0, 0.5);
+}
+.reset-button:hover {
+  color: #fff;
+  background: red;
+}
 .index-button {
   border: 0;
   border-radius: 5px;
