--- a/web/style.css
+++ b/web/style.css
@@ -59,11 +59,9 @@ body, html {
   margin-right: 20px;
 	box-shadow: 0px 3px 2px -2px rgba(0, 0, 0, 0.5);
 }
-.index-button .arrow {
-  position: relative;
-  top: -1px;
-  font-weight: bold;
-  margin-right: 3px;
+.index-button i {
+  font-size: smaller;
+  color: #777;
 }
 .index-button:hover {
   background: #fff;
