--- a/web/style.css
+++ b/web/style.css
@@ -233,9 +233,7 @@ body, html {
   padding: 20px 30px;
   background: #ffffcc;
   z-index: 1;
-	-moz-box-shadow: 0px 10px 15px -5px rgba(0, 0, 0, 0.4);
-	-webkit-box-shadow: 0px 10px 15px -5px rgba(0, 0, 0, 0.4);
-	box-shadow: 0px 10px 15px -5px rgba(0, 0, 0, 0.4);
+	box-shadow: 0px 10px 15px -5px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
   line-height: 200%;
 }
@@ -250,7 +248,12 @@ body, html {
   font-size: 16px;
   text-decoration: underline;
   cursor: pointer;
+}
+.popup a, .popup button {
   color: #0000ff;
+}
+.popup i {
+  margin-right: 3px;
 }
 .popup button:last-of-type {
   margin-left: 30px;
