--- a/web/style.css
+++ b/web/style.css
@@ -167,10 +167,12 @@ body, html {
   padding: 0;
   height: 100%;
   width: 100%;
+  box-sizing: border-box;
 }
 .locale-message textarea {
   border: 0;
   outline: 0;
+  padding: 8px;
   box-sizing: border-box;
   width: 100%;
   height: 100%;
