--- a/web/style.css
+++ b/web/style.css
@@ -17,9 +17,9 @@ body, html, input, textarea, select, button {
   font-size: 17px;
   border-bottom: 2px solid #444;
   background: -webkit-linear-gradient(top, #888, #777);
-  background: -moz-linear-gradient(top, #ddd, #ccc);
-  background: -o-linear-gradient(top, #ddd, #ccc);
-  background: linear-gradient(top, #ddd, #ccc);
+  background: -moz-linear-gradient(top, #888, #777);
+  background: -o-linear-gradient(top, #888, #777);
+  background: linear-gradient(top, #888, #777);
   text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.8);
 }
 .toolbar .title {
@@ -182,6 +182,9 @@ button {
 .en-message {
   white-space: pre-line;
 }
+.en-message, .locale-message textarea {
+  line-height: 140%;
+}
 .locale-message {
   margin: 0;
   padding: 0;
@@ -193,10 +196,10 @@ button {
   border: 0;
   outline: 0;
   padding: 8px;
-  box-sizing: border-box;
   width: 100%;
   height: 100%;
   font-size: 16px;
+  box-sizing: border-box;
 }
 .locale-message textarea:focus {
   background: #fffff0;
@@ -261,6 +264,7 @@ button {
   line-height: 300%;
 }
 .popup.success {
+  color: #151;
   background: #cfc;
 }
 .popup button {
