Fix checkbox positioning.

--- a/web/style.css
+++ b/web/style.css
@@ -109,6 +109,7 @@ input[type="checkbox"] {
   margin-right: 3px;
   cursor: pointer;
   position: relative;
+  vertical-align: middle;
   top: -2px;
 }
 button {
